2020-11-22  Robby Stephenson  <robby@periapsis.org>

	* Added data source for TVmaze.com.

2020-11-01  Robby Stephenson  <robby@periapsis.org>

	* Added barcode searching to Discogs data source.

2020-10-25  Robby Stephenson  <robby@periapsis.org>

	* Added sorting in the group view, via context menu.

2020-10-11  Robby Stephenson  <robby@periapsis.org>

	* Improve "Filter by Group" expression to account for tables (Bug 427145).
	* Switch to QRegularExpression from QRegExp for filtering.

2020-10-04  Robby Stephenson  <robby@periapsis.org>

	* Updated IGDB data source to APIv4.

2020-09-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug when checking in a loan (Bug 426815).

2020-09-17  Robby Stephenson  <robby@periapsis.org>

	* Added data source for Numista.com.

2020-09-16  Robby Stephenson  <robby@periapsis.org>

	* Enabled general keyword search for MusicBrainz data source (Bug 426560).

2020-09-13  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.3.3.
	* Improved Entrez data source to use API key and honor rate limit.

2020-09-02  Robby Stephenson  <robby@periapsis.org>

	* Improved ISBNdb data source to search for multiple ISBN values (Bug 415883).

2020-08-30  Robby Stephenson  <robby@periapsis.org>

	* Updated ISBNdb to API v2.

2020-08-22  Robby Stephenson  <robby@periapsis.org>

	* Updated DBC Open Search data source.

2020-08-21  Robby Stephenson  <robby@periapsis.org>

	* Fixed http headers for Amazon data source (Bug 425129).

2020-08-17  Robby Stephenson  <robby@periapsis.org>

	* Fixed regression for duplicated creation date (Bug 422127).

2020-08-10  Robby Stephenson  <robby@periapsis.org>

	* Fixed column header visibility after reordering fields (Bug 422298).

2020-08-07  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.3.2.

2020-08-06  Robby Stephenson  <robby@periapsis.org>

	* Updated KinoPoisk data source.

2020-08-02  Robby Stephenson  <robby@periapsis.org>

	* Updated Allocine data source.